src/objects/Authorization_ServiceCode_JO__c.object
<CustomObject>
    <description>Notes - Joins an auth to a service code</description>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <referenceTo>Authorization__c</referenceTo>
        <relationshipLabel>Authorization Service Codes</relationshipLabel>
        <relationshipName>Authorization_ServiceCode_JOs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>Service_Code__r.Service_Code__c</formula>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <referenceTo>Service_Code__c</referenceTo>
        <relationshipLabel>Authorization ServiceCode JOs</relationshipLabel>
        <relationshipName>Authorization_ServiceCode_JOs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Service_Value__c</fullName>
        <formula>Service_Code__r.Service_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Value</label>
        <type>Text</type>
    </fields>
    <label>Authorization ServiceCode JO</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Authorization ServiceCode JO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization ServiceCode JOs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>